# charoite

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  install.rs  main.rs  remove.rs  search.rs  utils.rs
