[package]
name = "charoite"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "charoite"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
urlencoding = "2.1"
